# parser-experiments

./: .gitignore  .gitmodules  .pdm.toml  Taskfile.yaml  pyproject.toml  readme.md
1-ply-plain/: 1-xonsh-parser.py  Taskfile.yaml
1-ply-plain/results/: ctx-parser-20220422.md  ctx-parser-20230404-165238.md  ctx-parser-20230404-202406.md  xonsh-parser-1650623966.md  xonsh-parser-20220422.md  xonsh-parser-20230404-162953.md  xonsh-parser-20230404-165238.md  xonsh-parser-20230404-202406.md  xonsh-parser.md
1-ply-plain/xonsh/: completion_parser_table.py  dev.githash  parser.out  real
10-lark/: Taskfile.yaml
10-lark/json-example/: json_parser.py  json_parser_main.py  sample.json
10-lark/py-example/: bench_utils.py  parser.py
10-lark/tutorials/: json.py
2.0-compare-ply-rply/: Taskfile.yaml  base_ply.py  base_rply.py  bench_utils.py  parsetab.py  profile_rply.py  readme.md
2.0-compare-ply-rply/results/: ply-version-20220422-174045.txt  ply-version-20220422-174119.txt  ply-version-20220422-174826.txt  ply-version-20220422-175014.txt  ply-version-20220422-175026.txt  ply-version-20220422-190659.txt  ply-version-20220422-190741.txt  ply-version.txt  (+10 more)
2.1-rply-version/: 1-xonsh-parser.py  2-ctx-parser.py  lexer.py
4-ply-cy/: .gitignore  Taskfile.yaml  readme.md  xonsh_parser.py
5-pgen2-blib2to3/: .gitignore  Taskfile.yaml  main.py  pytree.py
6-pegen-tst/: Taskfile.yaml  main.py  main_regex.py  parse.py  python.gram  python.gram.out  xonsh.gram
7-1-libcst-test/: main.py
7-parso-test/: Taskfile.yaml  main.py
8-tree-sitter/: Taskfile.yaml  builder.py  main.py
pegen-blog/: readme.md
(+44 files in other folders)
