[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Noortheen Raja", email = "jnoortheen@gmail.com"},
]
dependencies = [
    "requests>=2.27.1",
    "arger>=1.4.2",
    "better-exceptions>=0.3.3",
]
requires-python = ">=3.9"
license = {text = "MIT"}
[project.optional-dependencies]
test = [
    "pytest>=7.1.1",
]
bench = [
    "pympler>=1.0.1",
]

[tool.pdm]
[tool.pdm.dev-dependencies]

[build-system]
requires = ["pdm-pep517>=0.12.0"]
build-backend = "pdm.pep517.api"
