[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Noortheen Raja", email = "jnoortheen@gmail.com"},
]
dependencies = [
    "requests>=2.27.1",
    "arger>=1.4.2",
    "better-exceptions>=0.3.3",
    "appdirs>=1.4.4",
    "cython>=3.0.0a10",
    "mypy>=0.942",
    "parso>=0.8.3",
    "tree-sitter>=0.20.0",
    "libcst>=0.4.1",
    "build>=0.10.0",
    "regex>=2022.10.31",
]
requires-python = ">=3.9"
license = {text = "MIT"}
[project.optional-dependencies]
test = [
    "pytest>=6",
]
bench = [
    "pympler>=1.0.1",
    "pyinstrument>=4.1.1",
    "yappi>=1.3.3",
]
type = [
    "monkeytype>=22.2.0",
    "pytest-monkeytype>=1.1.0",
]
dev = [
    "pyupgrade>=2.32.0",
    "isort>=5.10.1",
    "black>=22.3.0",
    "autoflake>=1.4",
    "flake8>=4.0.1",
    "flake8-bugbear>=22.3.23",
    "-e file:///${PROJECT_ROOT}/s4-pegen#egg=pegen",
]

[tool.pdm]
[tool.pdm.dev-dependencies]

[build-system]
requires = ["pdm-pep517>=0.12.0"]
build-backend = "pdm.pep517.api"
